add basic functions

--- a/foods.html
+++ b/foods.html
@@ -25,7 +25,7 @@
     </div>
     <div id="food-filter">
       <label>Filter by Name
-        <input>
+        <input id="food-search">
       </label>
     </div>
     <table id="food-list">
@@ -33,12 +33,9 @@
         <tr><th>Name</th><th>Calories</th></tr>
       </thead>
       <tbody>
-        <!-- SAMPLE ROW INSPIRATION FOR YOUR DOM MANIPULATION
-        <tr class="food-row">
-          <td class="food-name">Banana</td>
+          <!--<td class="food-name">Banana</td>
           <td class="food-calories">35</td>
-          <td class="food-delete"><button>-</button></td>
-        </tr> -->
+          <td class="food-delete"><button>-</button></td>-->
       </tbody>
     </table>
   </div>
